# Snowflake

./: .gitmodules
src/decision/: CMakeLists.txt  package.xml
src/decision/include/: FinalDecision.h  LidarDecision.h  VisionDecision.h
src/decision/launch/: decision.launch  final_decision.launch  gaz_lidar_decision.launch  gps_decision.launch  gps_manager.launch  gps_manager3.launch  gps_stack.launch  lidar_decision.launch
src/decision/messages/: TwistConfidence.msg
src/decision/src/: FinalDecision.cpp  GpsDecision2.cpp  LidarDecision.cpp  VisionDecision.cpp  gps_decision2.cpp
src/drivers/launch/: ekf_testing.launch  gps_and_imu.launch  imu.launch
src/drivers/src/: gps_driver.cpp
src/firmware/gps_firmware/: gps_firmware.ino
src/localisation/: CMakeLists.txt  package.xml
src/localisation/include/: IMULocalisationNode.h
src/localisation/src/: IMULocalisationNode.cpp  imu_localisation_node.cpp
src/localisation/test/: imu-localisation-node-test.cpp
src/localization/: CMakeLists.txt  package.xml
src/map/: CMakeLists.txt  package.xml
src/map/include/: Map.h
src/map/launch/: map.launch
src/map/src/: Map.cpp
src/pathfinding_igvc/: CMakeLists.txt
src/pathfinding_igvc/include/: AStar.h
src/pathfinding_igvc/src/: PathFinder.cpp
src/pathfinding_igvc/test/: path-finder-test.cpp
src/sample_package/src/: MyNode.cpp  my_node.cpp
src/sb_gazebo/: CMakeLists.txt  package.xml
src/sb_gazebo/launch/: elsa_x.launch
src/sb_gazebo/urdf/: jfrost.gazebo  xelsa.gazebo  xelsa.xacro
src/sb_jaus/: CMakeLists.txt  package.xml  setup.py
src/sb_jaus/launch/: jaus_api.launch
src/sb_jaus/scripts/: jaus_node  jaus_node.py
src/sb_laserscan_processing/: CMakeLists.txt  package.xml
src/sb_laserscan_processing/include/: ConeIdentification.h
src/sb_laserscan_processing/src/: ConeIdentification.cpp
src/sb_laserscan_processing/test/: LaserscanBuilder.h  cone-identification-test.cpp
src/sb_utils/: CMakeLists.txt  package.xml
src/sb_utils/include/: sb_utils.h
src/sb_utils/src/: sb_utils.cpp
src/vision/include/: RosVision.h
src/vision/launch/: vision_stack.launch
src/vision/src/: RosVision.cpp
src/zed_filter/: CMakeLists.txt  package.xml
src/zed_filter/include/: PointCloudFilter.h  ZedFilter.h  ZedHeightFilter.h
src/zed_filter/src/: .ZedHeightFilter.cpp.swp  PointCloudFilter.cpp  ZedFilter.cpp  ZedHeightFilter.cpp  zed_filter.cpp  zed_height_filter.cpp
